# Quick-Capture

./: .gitignore  README.md  package-lock.json  package.json  screencast.webm  tailwind.config.js
.github/workflows/: main.yml
src/: index.html  main.js  out.css  package-lock.json  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tests.rs
